learning how to align correctly the cells

--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,7 @@
 .database-plugin__add-row {
   color: var(--text-accent);
   padding: 0.5rem;
-  display: table-row;
+  display: -ms-inline-grid;
   align-items: center;
   font-size: 0.875rem;
   cursor: pointer;
@@ -364,7 +364,6 @@
   border-spacing: 0;
   border-bottom: 1px solid var(--background-modifier-border);
   display: table;
-  height: 1px; /** Hack to prevent collapsing of table cells */
 }
 
 .database-plugin__th:last-child {
